de pagina's een beetje aangevuld met tekst en de javascript in orde gebracht.

--- a/home.css
+++ b/home.css
@@ -10,7 +10,7 @@
    
     font-style: oblique;
     font-size: larger;
-    text-decoration: none;
+    list-style: none;
 }
 #logo{
   width: 10%;  
