de styling van de site een beetje aangepast en de pagina's een beetje gevuld. en overbodigheden weggehaald.

--- a/home.css
+++ b/home.css
@@ -24,3 +24,21 @@ a{
     padding-left: 5%; 
     border-style: solid;
 }
+.img{
+    width: 2%;
+}
+.contactphotos{
+padding-top: 10%;
+
+}
+
+body{
+    background-image: url(maxresdefault.jpg);
+}
+
+#t1{
+padding-top: 10%;
+}
+#t2{
+    width: 20%;
+}
